--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.6",
   "description": "CLI tool to translate Notion pages into a different language by levergign DeepL's API",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
@@ -30,6 +31,7 @@
     "commander": "^10.0.1",
     "deepl-node": "^1.9.0",
     "dotenv": "^16.0.3",
+    "notion-translator": "^0.0.6",
     "open": "^9.1.0"
   }
 }
